--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     ],
     "require": {
         "php": "^8.0",
-        "filament/filament": "^3.x-dev",
+        "filament/filament": "^3.1",
         "spatie/laravel-package-tools": "^1.15"
     },
     "autoload": {
